Trying to get old core to run against the new stuff